// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilteredQueryAndStatusFilter handles simple_query_string 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "simple_query_string": Object {
            "fields": Array [
              "monitor.id",
              "monitor.url",
              "monitor.type",
              "monitor.status",
              "monitor.name",
              "url.full",
              "url.path",
              "url.scheme",
              "url.domain",
              "error.type",
            ],
            "query": "http",
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
    },
  },
  "statusFilter": undefined,
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range + id filter when status filter is absent 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "match": Object {
            "monitor.id": Object {
              "operator": "and",
              "query": "theID",
            },
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
    },
  },
  "statusFilter": undefined,
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range + id filter with status value 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "match": Object {
            "monitor.id": Object {
              "operator": "and",
              "query": "theID",
            },
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
    },
  },
  "statusFilter": "down",
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range filter and a status value when no other filters are present 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
    },
  },
  "statusFilter": "down",
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range filter for empty filters object 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
    },
  },
  "statusFilter": undefined,
}
`;
